---
config:
  theme: dark
---
erDiagram
    
    BI_dimension_tiempo{
        bigint id_tiempo
        int anyo
        int cuatrimestre
        int mes
    }
    BI_dimension_rango_etario_cliente{
        bigint id_rango_etario_cliente
        nvarchar(30) rango
    }
    BI_dimension_rango_etario_agente{
        bigint id_rango_etario_agente
        nvarchar(30) rango
    }
    BI_dimension_temporada{
        bigint id_temporada
        nvarchar(30) temporada
    }
    BI_dimension_tipo_servicio{
        bigint id_tipo_servicio
        nvarchar(30) tipo
    }
    BI_dimension_canal_de_venta{
        bigint id_canal_de_venta
        nvarchar(255) canal
    }
    BI_dimension_estado_propuesta{
        bigint id_estado_propuesta
        nvarchar(255) estado
    }
    BI_dimension_detalle_aspecto{
        bigint id_detalle_aspecto
        nvarchar(255) detalle
    }
    BI_hecho_venta{
        bigint rango_etario_cliente fk
        bigint canal_de_venta fk
        bigint tiempo fk
        bigint tipo_servicio fk
        decimal importe_total
    }
    BI_dimension_canal_de_venta ||--o{ BI_hecho_venta : ""
    BI_dimension_rango_etario_cliente ||--o{ BI_hecho_venta : ""
    BI_dimension_tiempo ||--o{ BI_hecho_venta : ""
    BI_dimension_tipo_servicio ||--o{ BI_hecho_venta : ""

    BI_hecho_solicitud{
        bigint tiempo fk
        bigint temporada fk
        bigint rango_etario_cliente fk
        int dias_anticipacion
    }

    BI_dimension_tiempo ||--o{ BI_hecho_solicitud : ""
    BI_dimension_temporada ||--o{ BI_hecho_solicitud : ""
    BI_dimension_rango_etario_cliente ||--o{ BI_hecho_solicitud : ""

    BI_hecho_propuesta{
        bigint estado_propuesta fk
        bigint temporada_inicio_viaje fk
        bigint tiempo_emision_propuesta fk
        bigint tiempo_inicio_viaje fk
        bigint tiempo_fecha_solicitud fk
        bigint rango_etario_agente fk
        int dias_entre_solicitud_y_propuesta
        decimal importe_total
        decimal desvio_presupuesto_importe
    }

    BI_dimension_estado_propuesta ||--o{ BI_hecho_propuesta : ""
    BI_dimension_temporada ||--o{ BI_hecho_propuesta : ""
    BI_dimension_tiempo ||--o{ BI_hecho_propuesta : "emision propuesta"
    BI_dimension_tiempo ||--o{ BI_hecho_propuesta : "inicio viaje"
    BI_dimension_tiempo ||--o{ BI_hecho_propuesta : "fecha solicitud"
    BI_dimension_rango_etario_agente ||--o{ BI_hecho_propuesta : ""

    BI_hecho_aspecto{
        bigint tiempo fk
        bigint detalle_aspecto fk
        int puntaje
    }
    BI_dimension_tiempo ||--o{ BI_hecho_aspecto : ""
    BI_dimension_detalle_aspecto ||--o{ BI_hecho_aspecto : ""

    BI_hecho_encuesta{
        bigint rango_etario_agente fk
        bigint tiempo fk
        int puntaje
    }
    BI_dimension_rango_etario_agente ||--o{ BI_hecho_encuesta : ""
    BI_dimension_tiempo ||--o{ BI_hecho_encuesta : ""

    V_BI_Ticket_Promedio{
        int Anio
        int Mes
        nvarchar Rango_Etario_Cliente
        nvarchar Canal_Venta
        decimal Ticket_Promedio
    }

    V_BI_Distribucion_Facturacion{
        int Anio
        int Cuatrimestre
        nvarchar Tipo_Servicio
        decimal Porcentaje_Facturacion
    }

    V_BI_Ranking_Solicitudes_Temporada{
        int Anio
        nvarchar Temporada
        nvarchar Rango_Etario_Cliente
        int Cantidad_Solicitudes
    }

    V_BI_Anticipacion_Solicitudes{
        int Anio
        int Cuatrimestre
        nvarchar Rango_Etario_Cliente
        decimal Anticipacion_Promedio_Dias
    }

    V_BI_Tasa_Aceptacion_Propuestas{
        int Anio
        int Cuatrimestre
        decimal Tasa_Aceptacion_Porcentaje
    }

    V_BI_Cotizacion_Promedio_Temporada{
        int Anio_Inicio_Viaje
        nvarchar Temporada_Inicio_Viaje
        decimal Cotizacion_Promedio
    }

    V_BI_Tiempo_Respuesta{
        int Anio_Solicitud
        int Mes_Solicitud
        nvarchar Rango_Etario_Agente
        decimal Tiempo_Respuesta_Dias
    }

    V_BI_Desvio_Presupuesto{
        int Anio_Emision
        int Mes_Emision
        decimal Desvio_Presupuesto_Promedio
    }

    V_BI_Ranking_Aspectos{
        int Anio
        int Cuatrimestre
        nvarchar Aspecto
        decimal Puntaje_Promedio
        bigint Ranking_Mejor_Valorado
        bigint Ranking_Peor_Valorado
    }

    V_BI_Satisfaccion_Promedio_Agente{
        int Anio
        int Mes
        nvarchar Rango_Etario_Agente
        decimal Satisfaccion_Promedio
    }

    BI_hecho_venta ||--o| V_BI_Ticket_Promedio : "vista 1"
    BI_hecho_venta ||--o| V_BI_Distribucion_Facturacion : "vista 2"
    BI_hecho_solicitud ||--o| V_BI_Ranking_Solicitudes_Temporada : "vista 3"
    BI_hecho_solicitud ||--o| V_BI_Anticipacion_Solicitudes : "vista 4"
    BI_hecho_propuesta ||--o| V_BI_Tasa_Aceptacion_Propuestas : "vista 5"
    BI_hecho_propuesta ||--o| V_BI_Cotizacion_Promedio_Temporada : "vista 6"
    BI_hecho_propuesta ||--o| V_BI_Tiempo_Respuesta : "vista 7"
    BI_hecho_propuesta ||--o| V_BI_Desvio_Presupuesto : "vista 8"
    BI_hecho_aspecto ||--o| V_BI_Ranking_Aspectos : "vista 9"
    BI_hecho_encuesta ||--o| V_BI_Satisfaccion_Promedio_Agente : "vista 10"